:beetle: Fix dark mode

--- a/src/renderer/components/Principal/style.scss
+++ b/src/renderer/components/Principal/style.scss
@@ -28,7 +28,7 @@
   .subcontents {
     display: none;
     position: absolute;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: var(--background-color);
     top: 0;
     bottom: 0;
     left: 0;
